<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Listado">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp"
        android:background="#009688">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/aires_label"
                    app:srcCompat="@drawable/ic_aires" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/aires_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/albanyles_label"
                    app:srcCompat="@drawable/ic_albanyl" />

                <Button
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/albanyles_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/carpinteria_label"
                    app:srcCompat="@drawable/ic_carpinteria" />

                <Button
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/carpinteria_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/cerrajero_label"
                    app:srcCompat="@drawable/ic_cerrajeros" />

                <Button
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/cerrajero_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/electricidad_label"
                    app:srcCompat="@drawable/ic_electricidad" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/electricidad_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/electronica_label"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/electronica_label"
                    app:srcCompat="@drawable/ic_electronica" />

                <Button
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/electronica_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/electrodomesticos_label"
                    app:srcCompat="@drawable/ic_electrodomesticos" />

                <Button
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/electrodomesticos_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/herreria_label"
                    app:srcCompat="@drawable/ic_herreria" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/herreria_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginRight="13dp"
                    android:contentDescription="@string/jardineria_label"
                    app:srcCompat="@drawable/ic_jardineria" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/jardineria_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/llanteros_label"
                    app:srcCompat="@drawable/ic_llantero" />

                <Button
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/llanteros_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/mecanicos_label"
                    app:srcCompat="@drawable/ic_mecanico" />

                <Button
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/mecanicos_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="21dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/plomeria_label"
                    app:srcCompat="@drawable/ic_plomero" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@drawable/category_btn_bg"
                    android:gravity="center_vertical"
                    android:text="@string/plomeria_label"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#E4E4E4"
                    android:textSize="34sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>